--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -546,18 +546,20 @@ function fuzzySearchMarker(s) {
     }
   }
 
+  s = s.toLowerCase();
+
   for (marker of collection) {
     let o = marker.properties;
-    let context = [o.name,o.type,humanReadable(o.type),o.editor_id].map(s=>s?s:'').join('|');
+    let context = ([o.name,o.type,humanReadable(o.type),o.editor_id].map(s=>s?s:'').join('|')).toLowerCase();
     if (context.includes(s) || context.includes(s.replace(' ','_'))) {
       return marker;
     }
   }
 
-  let words = s.split(' ').concat(s.split('_'));
+  let words = s.split(/[\s_]+/);
   for (marker of collection) {
     let o = marker.properties;
-    let context = [o.name,o.type,humanReadable(o.type),o.editor_id].map(s=>s?s:'').join('|');
+    let context = ([o.name,o.type,humanReadable(o.type),o.editor_id].map(s=>s?s:'').join('|')).toLowerCase();
     for (word of words) {
       if (context.includes(word)) {
         return marker;
