--- a/supraland/index.html
+++ b/supraland/index.html
@@ -1,1 +1,3 @@
-<meta http-equiv="refresh" content="5; url=https://joric.github.io/supraland/3d/">
+<meta http-equiv="refresh" content="0; url=https://joric.github.io/supraland/3d/">
+
+Redirecting to <a href="https://joric.github.io/supraland/3d">Supraland 3D</a>
