--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -838,7 +838,7 @@ function postprocessMarkers(data){
 
     if (o.type=='Settlement') {
       if (o.name == 'Oval') {
-        o.type = 'Pond / Lake';
+        o.type = 'Pond / Lake'; // Oval is NOT a settlement, the icon is wrong (confirmed)
       }
     }
 
