--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -53,7 +53,7 @@ html, body{margin:0px;height:100%;width:100%;font-family:sans-serif;}
     <form id="search-form">
       <div class="search-input-wrapper input-group">
         <button id="search-close" type="button" class="btn collapsed">x</button>
-        <input id="search-input" class="form-control" type="text" placeholder="Search for location, item or quest..." autofocus/>
+        <input id="search-input" class="form-control" type="text" placeholder="Search for location, person, item or quest..." autofocus/>
         <div class="input-group-append">
           <input type="submit" id="search-submit" type="button" class="btn" value="Search" />
         </div>
